# wwida

./: Cargo.toml  README.md  test.txt
src/: format.rs  main.rs
src/cli/: command.rs  mod.rs  sort.rs  summary.rs
src/cli/update/: mod.rs  status.rs
src/components/: category.rs  deadline.rs  list.rs  mod.rs  outcome.rs  priority.rs  short_string.rs  status.rs  tag.rs  task.rs  tasks.rs
src/components/time/: date_specifier.rs  duration.rs  mod.rs
