[package]
authors = ["Tudor Tomescu <tuydore+github@protonmail.com>"]
categories = ["command-line-utilities"]
description = "What Was I Doing Again? Simple CLI to-do list app."
edition = "2021"
keywords = ["to-do", "reminders", "cli", "tasks"]
license = "MIT"
name = "wwida"
readme = "README.md"
version = "1.3.0"

[dependencies]
anyhow = "1.0"
bson = "2.3.0"
chrono = {version = "0.4.19", features = ["serde"]}
clap = {version = "3.2.16", features = ["derive"]}
home = "0.5.3"
itertools = "0.10.3"
serde = {version = "1.0", features = ["derive"]}
